# fstrm

./: .commit_docs.sh  .gitignore  .travis.yml  ChangeLog  Doxyfile.in  DoxygenLayout.xml  Makefile.am  README.md  configure.ac  dir_40abab9aeae8eb717627f1b5eb397f1b.html  group__constants.html  group__constants.js  group__fstrm__control.html  group__fstrm__control.js  group__fstrm__file.html  group__fstrm__file.js  group__fstrm__file__writer.html  group__fstrm__file__writer.js  group__fstrm__io.html  group__fstrm__io.js  group__fstrm__iothr.html  group__fstrm__iothr.js  group__fstrm__rdwr.html  group__fstrm__rdwr.js  group__fstrm__reader.html  group__fstrm__reader.js  group__fstrm__res.html  group__fstrm__res.js  group__fstrm__tcp__writer.html  group__fstrm__tcp__writer.js  group__fstrm__unix__writer.html  group__fstrm__unix__writer.js  group__fstrm__writer.html  group__fstrm__writer.js  index.html  modules.html  modules.js  navtree.js  navtreedata.js  navtreeindex0.js  (+2 more)
debian/: changelog  control  copyright  fstrm-bin.install  libfstrm-dev.install  libfstrm0.symbols  rules
doxygen/: Doxyfile.in  DoxygenLayout.xml
fstrm/: control.c  control.h  file.c  file.h  file_writer.c  fstrm-private.h  fstrm.c  fstrm.h  iothr.c  iothr.h  libfstrm.sym  options.c  rdwr.c  rdwr.h  reader.c  reader.h  tcp_writer.c  tcp_writer.h  time.c  unix_writer.c  unix_writer.h  writer.c  writer.h
libmy/: argv.c  read_bytes.h  ubuf.h
m4/: my_code_coverage.m4  my_pkg_config_files.m4
man/: fstrm_capture.1  fstrm_dump.1  fstrm_replay.1
src/: .gitignore  fstrm_capture.c  fstrm_dump.c  fstrm_replay.c
t/: .gitignore  run_test_fstrm_io.sh  run_test_fstrm_io_file.sh  run_test_fstrm_io_tcp.sh  run_test_fstrm_io_tcp_hang.sh  run_test_fstrm_io_unix.sh  run_test_fstrm_io_unix_hang.sh  run_test_queue.sh  test_control.c  test_file_hello.c  test_fstrm_io.c  test_fstrm_io_file.c  test_fstrm_io_sock.c  test_fstrm_io_sock_hang.c  test_fstrm_io_unix.c  test_queue.c  test_writer_hello.c
t/program_tests/: test-fstrm.txt  test.fstrm  test_fstrm_dump.sh.in  test_fstrm_replay.sh.in
